--- a/.settings
+++ b/.settings
@@ -1,9 +1,11 @@
 [Breakpoints]
 Breakpoint[1]="GeneralOptions.468"
-Count=1
+Breakpoint[2]="PlaylistClass.594"
+Count=2
 
 [DebugWindow]
-Count=0
+Count=1
+DebugWindow[1]="CoverQueue"
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -91,6 +93,9 @@ Geometry=[47,-3,210,210]
 
 [DebugWindow/CoverManager]
 Geometry=[48,-4,210,210]
+
+[DebugWindow/CoverQueue]
+Geometry=[1276,-3,210,210]
 
 [DebugWindow/CoverQueue.Pop()]
 Geometry=[51,0,210,210]
@@ -780,7 +785,7 @@ Geometry=[0,404,301,301]
 Geometry=[1280,0,210,210]
 
 [DebugWindow/ptable]
-Geometry=[0,0,857,540]
+Geometry=[51,0,857,540]
 
 [DebugWindow/querymp.MediaHeaders]
 Geometry=[48,-4,749,827]
@@ -926,22 +931,32 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-Active=4
-File[4]=".src/Form/FMain.class:3320.34"
-File[5]="CHANGELOG_GIT:24.0"
-File[6]=".src/Form/CoverManager.class:649.59"
+File[4]=".src/Form/FMain.class:5186.58"
+File[5]="CHANGELOG_GIT:6.75"
+File[6]=".src/Form/CoverManager.class:1062.0"
 File[7]=".src/Classi/MplayerClass.class:293.9"
-File[8]=".src/Classi/PlaylistClass.class:43.26"
+File[8]=".src/Classi/PlaylistClass.class:593.24"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:0.0"
-File[11]="AA_ToDo:90.0"
+Active=11
+File[11]="AA_ToDo:99.98"
 File[12]=".src/Classi/AlbumView.class:13.39"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
 File[17]=".src/0_Moduli/Global.module:900.0"
-Count=17
+File[18]=".src/Form/Chains.form"
+File[19]=".src/Form/Chains.class:370.2"
+File[20]=".src/Classi/DynaGuiClass.class:267.34"
+File[21]=".src/Classi/StartClass.class:3.0"
+File[22]=".src/Form/XConfigureAudioDriver.form"
+File[23]=".src/Form/XConfigureAudioDriver.class:95.0"
+File[24]=".src/Form/XConfigureVideoDriver.class:90.2"
+File[25]=".src/Form/XConfigureVideoDriver.form"
+File[26]="cdaudio16.png"
+File[27]=".src/Form/CoverManager.form"
+Count=27
 
 [Watches]
 Count=12
