--- a/.settings
+++ b/.settings
@@ -4,8 +4,7 @@ Breakpoint[2]="PlaylistClass.594"
 Count=2
 
 [DebugWindow]
-Count=1
-DebugWindow[1]="CoverQueue"
+Count=0
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -95,7 +94,7 @@ Geometry=[47,-3,210,210]
 Geometry=[48,-4,210,210]
 
 [DebugWindow/CoverQueue]
-Geometry=[1276,-3,210,210]
+Geometry=[232,119,783,782]
 
 [DebugWindow/CoverQueue.Pop()]
 Geometry=[51,0,210,210]
@@ -523,6 +522,9 @@ Geometry=[52,0,210,210]
 [DebugWindow/WorkingCover]
 Geometry=[51,0,210,210]
 
+[DebugWindow/WorkingCover["mygrid"]]
+Geometry=[1276,-3,210,210]
+
 [DebugWindow/XmlFields]
 Geometry=[51,0,210,210]
 
@@ -588,6 +590,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/file]
 Geometry=[0,0,344,344]
+
+[DebugWindow/filesnotfound]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/findouts]
 Geometry=[0,0,344,344]
@@ -684,6 +689,9 @@ Geometry=[224,159,344,344]
 
 [DebugWindow/mygrid[hrow, 0].font]
 Geometry=[0,41,344,344]
+
+[DebugWindow/mygrid[row, column]]
+Geometry=[1276,-3,210,210]
 
 [DebugWindow/mylibrary]
 Geometry=[0,41,344,344]
@@ -931,21 +939,21 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:5186.58"
-File[5]="CHANGELOG_GIT:6.75"
-File[6]=".src/Form/CoverManager.class:1062.0"
-File[7]=".src/Classi/MplayerClass.class:293.9"
-File[8]=".src/Classi/PlaylistClass.class:593.24"
+File[4]=".src/Form/FMain.class:354.0"
+File[5]="CHANGELOG_GIT:4.10"
+Active=6
+File[6]=".src/Form/CoverManager.class:444.0"
+File[7]=".src/Classi/MplayerClass.class:1406.23"
+File[8]=".src/Classi/PlaylistClass.class:404.24"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:0.0"
-Active=11
-File[11]="AA_ToDo:99.98"
-File[12]=".src/Classi/AlbumView.class:13.39"
+File[11]="AA_ToDo:100.0"
+File[12]=".src/Classi/AlbumView.class:257.49"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:900.0"
+File[17]=".src/0_Moduli/Global.module:131.7"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
