--- a/.settings
+++ b/.settings
@@ -1,7 +1,6 @@
 [Breakpoints]
 Breakpoint[1]="GeneralOptions.468"
-Breakpoint[2]="PlaylistClass.594"
-Count=2
+Count=1
 
 [DebugWindow]
 Count=0
@@ -939,15 +938,15 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-Active=4
-File[4]=".src/Form/FMain.class:5301.3"
+File[4]=".src/Form/FMain.class:8656.0"
 File[5]="CHANGELOG_GIT:4.10"
-File[6]=".src/Form/CoverManager.class:444.0"
+File[6]=".src/Form/CoverManager.class:805.0"
 File[7]=".src/Classi/MplayerClass.class:1406.23"
-File[8]=".src/Classi/PlaylistClass.class:404.24"
+File[8]=".src/Classi/PlaylistClass.class:1433.38"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:0.0"
-File[11]="AA_ToDo:100.0"
+File[10]=".src/Form/GeneralOptions.class:480.30"
+Active=11
+File[11]="AA_ToDo:111.92"
 File[12]=".src/Classi/AlbumView.class:360.0"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
@@ -964,7 +963,12 @@ File[24]=".src/Form/XConfigureVideoDriver.class:90.2"
 File[25]=".src/Form/XConfigureVideoDriver.form"
 File[26]="cdaudio16.png"
 File[27]=".src/Form/CoverManager.form"
-Count=27
+File[28]=".src/Form/ProfileManager.class:28.94"
+File[29]=".src/Form/DVBTuner.class:368.36"
+File[30]=".src/Classi/YoutubeClass.class:571.28"
+File[31]=".src/Classi/ShoutCastClass.class:279.34"
+File[32]=".src/Classi/FlashClass.class:144.13"
+Count=32
 
 [Watches]
 Count=12
