Correctly set default list background color to color.textbackrgound

--- a/.settings
+++ b/.settings
@@ -938,16 +938,16 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:4114.2"
-File[5]="CHANGELOG_GIT:5.104"
+Active=4
+File[4]=".src/Form/FMain.class:339.14"
+File[5]="CHANGELOG_GIT:14.10"
 File[6]=".src/Form/CoverManager.class:800.25"
 File[7]=".src/Classi/MplayerClass.class:651.0"
-File[8]=".src/Classi/PlaylistClass.class:627.6"
+File[8]=".src/Classi/PlaylistClass.class:1254.61"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:480.30"
-Active=11
-File[11]="AA_ToDo:97.0"
-File[12]=".src/Classi/AlbumView.class:360.0"
+File[10]=".src/Form/GeneralOptions.class:745.24"
+File[11]="AA_ToDo:98.71"
+File[12]=".src/Classi/AlbumView.class:337.11"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
@@ -967,8 +967,13 @@ File[28]=".src/Form/ProfileManager.class:28.94"
 File[29]=".src/Form/DVBTuner.class:368.36"
 File[30]=".src/Classi/YoutubeClass.class:571.28"
 File[31]=".src/Classi/ShoutCastClass.class:279.34"
-File[32]=".src/Classi/FlashClass.class:144.13"
-Count=32
+File[32]=".src/Classi/FlashClass.class:129.11"
+File[33]=".src/Form/AllOptions.form"
+File[34]=".src/Form/DVBTuner.form"
+File[35]=".src/Form/AFiltersCfg.form"
+File[36]=".src/Form/OverlayTrayTip.class:11.0"
+File[37]=".src/Form/OverlayTrayTip.form"
+Count=37
 
 [Watches]
 Count=12
