--- a/.settings
+++ b/.settings
@@ -638,6 +638,9 @@ Geometry=[0,0,2550,412]
 [DebugWindow/librarygrid]
 Geometry=[51,340,614,580]
 
+[DebugWindow/librarygrid.Children[0]]
+Geometry=[1280,0,415,708]
+
 [DebugWindow/lines]
 Geometry=[0,0,1186,344]
 
@@ -939,20 +942,20 @@ File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
 Active=4
-File[4]=".src/Form/FMain.class:339.14"
-File[5]="CHANGELOG_GIT:14.10"
+File[4]=".src/Form/FMain.class:8065.3"
+File[5]="CHANGELOG_GIT:20.45"
 File[6]=".src/Form/CoverManager.class:800.25"
 File[7]=".src/Classi/MplayerClass.class:651.0"
-File[8]=".src/Classi/PlaylistClass.class:1254.61"
+File[8]=".src/Classi/PlaylistClass.class:1154.46"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:745.24"
+File[10]=".src/Form/GeneralOptions.class:752.0"
 File[11]="AA_ToDo:98.71"
 File[12]=".src/Classi/AlbumView.class:337.11"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:900.7"
+File[17]=".src/0_Moduli/Global.module:80.26"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
@@ -971,9 +974,10 @@ File[32]=".src/Classi/FlashClass.class:129.11"
 File[33]=".src/Form/AllOptions.form"
 File[34]=".src/Form/DVBTuner.form"
 File[35]=".src/Form/AFiltersCfg.form"
-File[36]=".src/Form/OverlayTrayTip.class:11.0"
+File[36]=".src/Form/OverlayTrayTip.class:158.0"
 File[37]=".src/Form/OverlayTrayTip.form"
-Count=37
+File[38]=".src/Form/SubAndOsd.class:152.95"
+Count=38
 
 [Watches]
 Count=12
