--- a/.settings
+++ b/.settings
@@ -585,7 +585,7 @@ Geometry=[1280,0,210,210]
 Geometry=[0,212,588,458]
 
 [DebugWindow/fields]
-Geometry=[0,0,344,344]
+Geometry=[51,0,344,344]
 
 [DebugWindow/file]
 Geometry=[0,0,344,344]
@@ -712,6 +712,9 @@ Geometry=[420,115,344,344]
 
 [DebugWindow/myplaylist]
 Geometry=[669,70,344,344]
+
+[DebugWindow/myplaylist.SearchTable]
+Geometry=[125,290,1047,316]
 
 [DebugWindow/myplaylist[r, c]]
 Geometry=[0,0,301,301]
@@ -848,6 +851,9 @@ Geometry=[0,0,210,210]
 [DebugWindow/subtitletracks]
 Geometry=[48,-4,210,210]
 
+[DebugWindow/table]
+Geometry=[1505,409,448,340]
+
 [DebugWindow/tabstrip1]
 Geometry=[-4,-3,210,210]
 
@@ -941,12 +947,12 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-Active=4
-File[4]=".src/Form/FMain.class:8065.3"
-File[5]="CHANGELOG_GIT:20.45"
-File[6]=".src/Form/CoverManager.class:800.25"
+File[4]=".src/Form/FMain.class:8555.0"
+Active=5
+File[5]="CHANGELOG_GIT:7.10"
+File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:651.0"
-File[8]=".src/Classi/PlaylistClass.class:1154.46"
+File[8]=".src/Classi/PlaylistClass.class:1243.0"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:752.0"
 File[11]="AA_ToDo:98.71"
@@ -955,7 +961,7 @@ File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:80.26"
+File[17]=".src/0_Moduli/Global.module:84.26"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
@@ -977,20 +983,11 @@ File[35]=".src/Form/AFiltersCfg.form"
 File[36]=".src/Form/OverlayTrayTip.class:158.0"
 File[37]=".src/Form/OverlayTrayTip.form"
 File[38]=".src/Form/SubAndOsd.class:152.95"
-Count=38
+File[39]=".src/Form/zzzFake.form"
+File[40]=".src/Form/zzzFake.class:30.24"
+Count=40
 
 [Watches]
-Count=12
-Watch[1]="TheObject.name"
-Watch[2]="media_size"
-Watch[3]="media_length"
-Watch[4]="media_audiobitrate"
-Watch[5]="newrow"
-Watch[6]="mplayer.currentoptions"
-Watch[7]="lines[i]"
-Watch[8]="lines[i+1]"
-Watch[9]="lines[i+2]"
-Watch[10]="settings[0]"
-Watch[11]="cachedopts"
-Watch[12]="dir(directory, \"*.WAV\")"
+Count=1
+Watch[1]="i"
 
