--- a/.settings
+++ b/.settings
@@ -512,6 +512,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/Triples]
 Geometry=[0,0,1187,344]
 
+[DebugWindow/Userfont]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/VideoChainBox]
 Geometry=[52,0,210,831]
 
@@ -547,6 +550,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/blackbox]
 Geometry=[794,22,315,922]
+
+[DebugWindow/brother]
+Geometry=[1280,0,210,210]
 
 [DebugWindow/button]
 Geometry=[-4,-3,210,210]
@@ -821,6 +827,9 @@ Geometry=[0,0,210,210]
 [DebugWindow/shadelowpicture]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/shadeup]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/shadowpic]
 Geometry=[51,0,210,210]
 
@@ -947,16 +956,16 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:8555.0"
+File[4]=".src/Form/FMain.class:4315.0"
 Active=5
-File[5]="CHANGELOG_GIT:7.10"
+File[5]="CHANGELOG_GIT:8.10"
 File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:651.0"
 File[8]=".src/Classi/PlaylistClass.class:1243.0"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:752.0"
+File[10]=".src/Form/GeneralOptions.class:743.32"
 File[11]="AA_ToDo:98.71"
-File[12]=".src/Classi/AlbumView.class:337.11"
+File[12]=".src/Classi/AlbumView.class:239.14"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
