--- a/.settings
+++ b/.settings
@@ -995,11 +995,12 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:8469.8"
-File[5]="CHANGELOG_GIT:8.10"
+Active=4
+File[4]=".src/Form/FMain.class:1598.0"
+File[5]="CHANGELOG_GIT:25.27"
 File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:295.37"
-File[8]=".src/Classi/PlaylistClass.class:1243.0"
+File[8]=".src/Classi/PlaylistClass.class:411.0"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:743.32"
 File[11]="AA_ToDo:98.71"
@@ -1033,9 +1034,10 @@ File[38]=".src/Form/zzzFake.form"
 File[39]=".src/Form/zzzFake.class:30.24"
 File[40]=".src/Form/AudioForm.form"
 File[41]=".src/Classi/Meters.class:66.1"
-Active=42
 File[42]=".src/Classi/MetersNEW.class:149.24"
-Count=42
+File[43]="configure.png"
+File[44]=".src/Classi/TagLib.class:137.13"
+Count=44
 
 [Watches]
 Count=1
