--- a/.settings
+++ b/.settings
@@ -995,21 +995,21 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-Active=4
-File[4]=".src/Form/FMain.class:1598.0"
-File[5]="CHANGELOG_GIT:25.27"
+File[4]=".src/Form/FMain.class:4315.4"
+File[5]="CHANGELOG_GIT:5.2"
 File[6]=".src/Form/CoverManager.class:883.17"
-File[7]=".src/Classi/MplayerClass.class:295.37"
+File[7]=".src/Classi/MplayerClass.class:304.0"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:743.32"
-File[11]="AA_ToDo:98.71"
+Active=11
+File[11]="AA_ToDo:102.40"
 File[12]=".src/Classi/AlbumView.class:239.14"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:84.26"
+File[17]=".src/0_Moduli/Global.module:218.0"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
@@ -1037,7 +1037,8 @@ File[41]=".src/Classi/Meters.class:66.1"
 File[42]=".src/Classi/MetersNEW.class:149.24"
 File[43]="configure.png"
 File[44]=".src/Classi/TagLib.class:137.13"
-Count=44
+File[45]=".src/Classi/MplayerClassNEW.class:644.58"
+Count=45
 
 [Watches]
 Count=1
