--- a/.settings
+++ b/.settings
@@ -994,22 +994,22 @@ SearchString=True
 [OpenFile]
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
+Active=3
 File[3]=".src/Form/LogWindow.form"
 File[4]=".src/Form/FMain.class:4315.4"
-File[5]="CHANGELOG_GIT:5.2"
+File[5]="CHANGELOG_GIT:3.10"
 File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:304.0"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:743.32"
-Active=11
 File[11]="AA_ToDo:102.40"
 File[12]=".src/Classi/AlbumView.class:239.14"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:218.0"
+File[17]=".src/0_Moduli/Global.module:106.0"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
@@ -1021,7 +1021,7 @@ File[25]=".src/Form/XConfigureVideoDriver.form"
 File[26]="cdaudio16.png"
 File[27]=".src/Form/CoverManager.form"
 File[28]=".src/Form/ProfileManager.class:28.94"
-File[29]=".src/Form/DVBTuner.class:368.36"
+File[29]=".src/Form/DVBTuner.class:439.0"
 File[30]=".src/Classi/YoutubeClass.class:571.28"
 File[31]=".src/Classi/ShoutCastClass.class:279.34"
 File[32]=".src/Classi/FlashClass.class:129.11"
@@ -1038,7 +1038,10 @@ File[42]=".src/Classi/MetersNEW.class:149.24"
 File[43]="configure.png"
 File[44]=".src/Classi/TagLib.class:137.13"
 File[45]=".src/Classi/MplayerClassNEW.class:644.58"
-Count=45
+File[46]=".src/Classi/FloatSpinBox.class:19.46"
+File[47]=".src/Form/VideoEqualizer.class:68.15"
+File[48]=".src/Form/ChooseAspect.form"
+Count=48
 
 [Watches]
 Count=1
