"unglitchy" Fullscreen/window/fullscreen transitions and pause mplayer and unpause it when chainging resolutions/framerates

--- a/.settings
+++ b/.settings
@@ -236,6 +236,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/Last]
 Geometry=[52,0,267,712]
 
+[DebugWindow/Last.Parent.Children]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/LastObj]
 Geometry=[-4,-3,210,210]
 
@@ -586,6 +589,12 @@ Geometry=[794,22,315,922]
 
 [DebugWindow/brother]
 Geometry=[1280,0,210,210]
+
+[DebugWindow/brother.proxy]
+Geometry=[1628,198,499,471]
+
+[DebugWindow/brothersproxies]
+Geometry=[1280,0,488,244]
 
 [DebugWindow/button]
 Geometry=[-4,-3,210,210]
@@ -994,12 +1003,12 @@ SearchString=True
 [OpenFile]
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
-Active=3
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:4315.4"
-File[5]="CHANGELOG_GIT:3.10"
+Active=4
+File[4]=".src/Form/FMain.class:3458.31"
+File[5]="CHANGELOG_GIT:35.76"
 File[6]=".src/Form/CoverManager.class:883.17"
-File[7]=".src/Classi/MplayerClass.class:304.0"
+File[7]=".src/Classi/MplayerClass.class:944.0"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:743.32"
@@ -1009,7 +1018,7 @@ File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:106.0"
+File[17]=".src/0_Moduli/Global.module:47.24"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
