--- a/.settings
+++ b/.settings
@@ -195,7 +195,7 @@ Geometry=[0,0,301,301]
 Geometry=[0,0,301,301]
 
 [DebugWindow/Hsplit1.Layout]
-Geometry=[0,0,210,210]
+Geometry=[51,0,210,210]
 
 [DebugWindow/Hsplit1.layout]
 Geometry=[0,0,210,210]
@@ -430,6 +430,9 @@ Geometry=[0,0,301,301]
 
 [DebugWindow/SplittedFileInMemory]
 Geometry=[0,0,423,670]
+
+[DebugWindow/SplitterLayout]
+Geometry=[1276,-3,210,210]
 
 [DebugWindow/Stat(fullpathitem)]
 Geometry=[0,35,344,344]
@@ -1004,11 +1007,11 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-Active=4
-File[4]=".src/Form/FMain.class:3458.31"
-File[5]="CHANGELOG_GIT:35.76"
+File[4]=".src/Form/FMain.class:3460.38"
+Active=5
+File[5]="CHANGELOG_GIT:22.60"
 File[6]=".src/Form/CoverManager.class:883.17"
-File[7]=".src/Classi/MplayerClass.class:944.0"
+File[7]=".src/Classi/MplayerClass.class:953.17"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:743.32"
