--- a/.settings
+++ b/.settings
@@ -872,6 +872,9 @@ Geometry=[1364,265,993,778]
 [DebugWindow/returnvalue]
 Geometry=[0,41,344,344]
 
+[DebugWindow/scr]
+Geometry=[42,95,210,210]
+
 [DebugWindow/settings]
 Geometry=[0,0,210,210]
 
@@ -1007,9 +1010,9 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:3460.38"
-Active=5
-File[5]="CHANGELOG_GIT:22.60"
+Active=4
+File[4]=".src/Form/FMain.class:3468.23"
+File[5]="CHANGELOG_GIT:8.2"
 File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:953.17"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
