--- a/.settings
+++ b/.settings
@@ -365,6 +365,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/Scan(AllOptions, "*-lavdopts *")]
 Geometry=[0,41,344,344]
 
+[DebugWindow/Screens]
+Geometry=[1280,0,210,210]
+
 [DebugWindow/Screenshot]
 Geometry=[0,0,344,344]
 
@@ -1011,8 +1014,8 @@ File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
 Active=4
-File[4]=".src/Form/FMain.class:3468.23"
-File[5]="CHANGELOG_GIT:8.2"
+File[4]=".src/Form/FMain.class:8974.0"
+File[5]="CHANGELOG_GIT:57.35"
 File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:953.17"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
