--- a/.settings
+++ b/.settings
@@ -1014,8 +1014,8 @@ File[1]=".src/Form/MyQuestion.class:85.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
 Active=4
-File[4]=".src/Form/FMain.class:8974.0"
-File[5]="CHANGELOG_GIT:57.35"
+File[4]=".src/Form/FMain.class:3537.27"
+File[5]="CHANGELOG_GIT:4.38"
 File[6]=".src/Form/CoverManager.class:883.17"
 File[7]=".src/Classi/MplayerClass.class:953.17"
 File[8]=".src/Classi/PlaylistClass.class:411.0"
@@ -1027,7 +1027,7 @@ File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:47.24"
+File[17]=".src/0_Moduli/Global.module:49.17"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
@@ -1059,7 +1059,8 @@ File[45]=".src/Classi/MplayerClassNEW.class:644.58"
 File[46]=".src/Classi/FloatSpinBox.class:19.46"
 File[47]=".src/Form/VideoEqualizer.class:68.15"
 File[48]=".src/Form/ChooseAspect.form"
-Count=48
+File[49]="dvd16.png"
+Count=49
 
 [Watches]
 Count=1
