Very alpha stage epg window integration (dvbt tab, epg button)

--- a/.settings
+++ b/.settings
@@ -114,7 +114,7 @@ Geometry=[51,0,301,301]
 Geometry=[1280,0,210,210]
 
 [DebugWindow/Dialog]
-Geometry=[0,0,344,344]
+Geometry=[51,0,344,344]
 
 [DebugWindow/Dialog.filter]
 Geometry=[0,35,344,344]
@@ -1010,36 +1010,35 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Form/MyQuestion.class:85.22"
+File[1]=".src/Form/MyQuestion.class:38.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:3560.2"
-Active=5
-File[5]="CHANGELOG_GIT:3.10"
-File[6]=".src/Form/CoverManager.class:883.17"
-File[7]=".src/Classi/MplayerClass.class:953.17"
-File[8]=".src/Classi/PlaylistClass.class:411.0"
+File[4]=".src/Form/FMain.class:9375.28"
+File[5]="CHANGELOG_GIT:21.50"
+File[6]=".src/Form/CoverManager.class:908.30"
+File[7]=".src/Classi/MplayerClass.class:641.32"
+File[8]=".src/Classi/PlaylistClass.class:118.24"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:743.32"
-File[11]="AA_ToDo:102.40"
+File[10]=".src/Form/GeneralOptions.class:772.23"
+File[11]="AA_ToDo:100.39"
 File[12]=".src/Classi/AlbumView.class:239.14"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
 File[16]="shadow.png"
-File[17]=".src/0_Moduli/Global.module:49.17"
+File[17]=".src/0_Moduli/Global.module:67.33"
 File[18]=".src/Form/Chains.form"
 File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
 File[21]=".src/Classi/StartClass.class:3.0"
 File[22]=".src/Form/XConfigureAudioDriver.form"
-File[23]=".src/Form/XConfigureAudioDriver.class:95.0"
-File[24]=".src/Form/XConfigureVideoDriver.class:90.2"
+File[23]=".src/Form/XConfigureAudioDriver.class:147.35"
+File[24]=".src/Form/XConfigureVideoDriver.class:197.17"
 File[25]=".src/Form/XConfigureVideoDriver.form"
 File[26]="cdaudio16.png"
 File[27]=".src/Form/CoverManager.form"
 File[28]=".src/Form/ProfileManager.class:28.94"
-File[29]=".src/Form/DVBTuner.class:439.0"
+File[29]=".src/Form/DVBTuner.class:341.2"
 File[30]=".src/Classi/YoutubeClass.class:571.28"
 File[31]=".src/Classi/ShoutCastClass.class:279.34"
 File[32]=".src/Classi/FlashClass.class:129.11"
@@ -1055,12 +1054,19 @@ File[41]=".src/Classi/Meters.class:66.1"
 File[42]=".src/Classi/MetersNEW.class:149.24"
 File[43]="configure.png"
 File[44]=".src/Classi/TagLib.class:137.13"
-File[45]=".src/Classi/MplayerClassNEW.class:644.58"
+File[45]=".src/Classi/MplayerClassNEW.class:655.40"
 File[46]=".src/Classi/FloatSpinBox.class:19.46"
 File[47]=".src/Form/VideoEqualizer.class:68.15"
 File[48]=".src/Form/ChooseAspect.form"
 File[49]="dvd16.png"
-Count=49
+File[50]=".src/0_Moduli/MyDialog.class:46.24"
+File[51]=".src/Classi/dvbsnoop_class.class:90.20"
+File[52]=".src/Form/EpgForm.form"
+File[53]=".src/Form/HotKeyGrab.form"
+File[54]=".src/Form/AskName.form"
+File[55]=".src/Form/AskName.class:0.0"
+File[56]=".src/Classi/AudiotagClass.class:0.0"
+Count=56
 
 [Watches]
 Count=1
