--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 # Gambas Project File 3.0
 # Compiled with Gambas 3.1.1
 Title=xt7-player
-Startup=EpgForm
+Startup=StartClass
 Icon=xt7-player.png
 Version=3.0.10
 Component=gb.image
