--- a/.settings
+++ b/.settings
@@ -638,6 +638,9 @@ Geometry=[1280,0,210,210]
 [DebugWindow/droppedfiles]
 Geometry=[0,212,588,458]
 
+[DebugWindow/epgscanprocess]
+Geometry=[0,0,210,210]
+
 [DebugWindow/fields]
 Geometry=[51,0,344,344]
 
@@ -1013,14 +1016,15 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:38.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:9375.28"
-File[5]="CHANGELOG_GIT:21.50"
+File[4]=".src/Form/FMain.class:4781.2"
+Active=5
+File[5]="CHANGELOG_GIT:3.10"
 File[6]=".src/Form/CoverManager.class:908.30"
-File[7]=".src/Classi/MplayerClass.class:641.32"
+File[7]=".src/Classi/MplayerClass.class:295.16"
 File[8]=".src/Classi/PlaylistClass.class:118.24"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:772.23"
-File[11]="AA_ToDo:100.39"
+File[11]="AA_ToDo:96.0"
 File[12]=".src/Classi/AlbumView.class:239.14"
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
@@ -1051,22 +1055,21 @@ File[38]=".src/Form/zzzFake.form"
 File[39]=".src/Form/zzzFake.class:30.24"
 File[40]=".src/Form/AudioForm.form"
 File[41]=".src/Classi/Meters.class:66.1"
-File[42]=".src/Classi/MetersNEW.class:149.24"
-File[43]="configure.png"
-File[44]=".src/Classi/TagLib.class:137.13"
-File[45]=".src/Classi/MplayerClassNEW.class:655.40"
-File[46]=".src/Classi/FloatSpinBox.class:19.46"
-File[47]=".src/Form/VideoEqualizer.class:68.15"
-File[48]=".src/Form/ChooseAspect.form"
-File[49]="dvd16.png"
-File[50]=".src/0_Moduli/MyDialog.class:46.24"
-File[51]=".src/Classi/dvbsnoop_class.class:90.20"
-File[52]=".src/Form/EpgForm.form"
-File[53]=".src/Form/HotKeyGrab.form"
-File[54]=".src/Form/AskName.form"
-File[55]=".src/Form/AskName.class:0.0"
-File[56]=".src/Classi/AudiotagClass.class:0.0"
-Count=56
+File[42]="configure.png"
+File[43]=".src/Classi/TagLib.class:137.13"
+File[44]=".src/Classi/FloatSpinBox.class:19.46"
+File[45]=".src/Form/VideoEqualizer.class:68.15"
+File[46]=".src/Form/ChooseAspect.form"
+File[47]="dvd16.png"
+File[48]=".src/0_Moduli/MyDialog.class:46.24"
+File[49]=".src/Classi/dvbsnoop_class.class:133.0"
+File[50]=".src/Form/EpgForm.form"
+File[51]=".src/Form/HotKeyGrab.form"
+File[52]=".src/Form/AskName.form"
+File[53]=".src/Form/AskName.class:0.0"
+File[54]=".src/Classi/AudiotagClass.class:0.0"
+File[55]=".src/Form/EpgForm.class:126.0"
+Count=55
 
 [Watches]
 Count=1
