--- a/.settings
+++ b/.settings
@@ -1044,8 +1044,7 @@ File[1]=".src/Form/MyQuestion.class:38.22"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
 File[4]=".src/Form/FMain.class:3062.0"
-Active=5
-File[5]="CHANGELOG_GIT:18.45"
+File[5]="CHANGELOG_GIT:3.63"
 File[6]=".src/Form/CoverManager.class:908.30"
 File[7]=".src/Classi/MplayerClass.class:295.16"
 File[8]=".src/Classi/PlaylistClass.class:118.24"
@@ -1063,8 +1062,8 @@ File[19]=".src/Form/Chains.class:370.2"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
 File[21]=".src/Classi/StartClass.class:3.0"
 File[22]=".src/Form/XConfigureAudioDriver.form"
-File[23]=".src/Form/XConfigureAudioDriver.class:147.35"
-File[24]=".src/Form/XConfigureVideoDriver.class:197.17"
+File[23]=".src/Form/XConfigureAudioDriver.class:85.0"
+File[24]=".src/Form/XConfigureVideoDriver.class:85.0"
 File[25]=".src/Form/XConfigureVideoDriver.form"
 File[26]="cdaudio16.png"
 File[27]=".src/Form/CoverManager.form"
@@ -1075,6 +1074,7 @@ File[31]=".src/Classi/ShoutCastClass.class:279.34"
 File[32]=".src/Classi/FlashClass.class:129.11"
 File[33]=".src/Form/AllOptions.form"
 File[34]=".src/Form/DVBTuner.form"
+Active=35
 File[35]=".src/Form/AFiltersCfg.form"
 File[36]=".src/Form/OverlayTrayTip.class:158.0"
 File[37]=".src/Form/OverlayTrayTip.form"
@@ -1088,7 +1088,7 @@ File[44]=".src/Classi/FloatSpinBox.class:19.46"
 File[45]=".src/Form/VideoEqualizer.class:68.15"
 File[46]=".src/Form/ChooseAspect.form"
 File[47]="dvd16.png"
-File[48]=".src/0_Moduli/MyDialog.class:46.24"
+File[48]=".src/0_Moduli/MyDialog.class:46.3"
 File[49]=".src/Classi/dvbsnoop_class.class:482.18"
 File[50]=".src/Form/EpgForm.form"
 File[51]=".src/Form/HotKeyGrab.form"
@@ -1097,7 +1097,10 @@ File[53]=".src/Form/AskName.class:0.0"
 File[54]=".src/Classi/AudiotagClass.class:0.0"
 File[55]=".src/Form/EpgForm.class:451.2"
 File[56]=".src/Form/Xt7Egg.form"
-Count=56
+File[57]=".src/Form/AFiltersCfg.class:187.0"
+File[58]=".src/Form/VFiltersCfg.form"
+File[59]=".src/Form/VFiltersCfg.class:521.3"
+Count=59
 
 [Watches]
 Count=1
