Possible Null object error if no playlist item selected when changing icon width

--- a/.settings
+++ b/.settings
@@ -1,6 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="GeneralOptions.477"
-Count=1
+Count=0
 
 [DebugWindow]
 Count=0
@@ -1073,14 +1072,14 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:89.29"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:9182.22"
+File[4]=".src/Form/FMain.class:2491.0"
 Active=5
-File[5]="CHANGELOG_GIT:9.0"
+File[5]="CHANGELOG_GIT:7.12"
 File[6]=".src/Form/CoverManager.class:908.30"
 File[7]=".src/Classi/MplayerClass.class:295.16"
 File[8]=".src/Classi/PlaylistClass.class:59.19"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:146.110"
+File[10]=".src/Form/GeneralOptions.class:74.60"
 File[11]="AA_ToDo:117.80"
 File[12]=".src/Classi/AlbumView.class:94.27"
 File[13]=".src/Form/FMain.form"
@@ -1096,47 +1095,46 @@ File[22]=".src/Form/XConfigureAudioDriver.form"
 File[23]=".src/Form/XConfigureAudioDriver.class:146.24"
 File[24]=".src/Form/XConfigureVideoDriver.class:85.0"
 File[25]=".src/Form/XConfigureVideoDriver.form"
-File[26]="cdaudio16.png"
-File[27]=".src/Form/CoverManager.form"
-File[28]=".src/Form/ProfileManager.class:28.94"
-File[29]=".src/Form/DVBTuner.class:385.26"
-File[30]=".src/Classi/YoutubeClass.class:571.22"
-File[31]=".src/Classi/ShoutCastClass.class:279.34"
-File[32]=".src/Classi/FlashClass.class:129.11"
-File[33]=".src/Form/AllOptions.form"
-File[34]=".src/Form/DVBTuner.form"
-File[35]=".src/Form/AFiltersCfg.form"
-File[36]=".src/Form/OverlayTrayTip.class:158.0"
-File[37]=".src/Form/OverlayTrayTip.form"
-File[38]=".src/Form/zzzFake.form"
-File[39]=".src/Form/zzzFake.class:86.86"
-File[40]=".src/Form/AudioForm.form"
-File[41]=".src/Classi/Meters.class:66.1"
-File[42]="configure.png"
-File[43]=".src/Classi/TagLib.class:137.13"
-File[44]=".src/Classi/FloatSpinBox.class:19.46"
-File[45]=".src/Form/VideoEqualizer.class:68.15"
-File[46]=".src/Form/ChooseAspect.form"
-File[47]="dvd16.png"
-File[48]=".src/0_Moduli/MyDialog.class:46.0"
-File[49]=".src/Classi/dvbsnoop_class.class:482.18"
-File[50]=".src/Form/EpgForm.form"
-File[51]=".src/Form/HotKeyGrab.form"
-File[52]=".src/Form/AskName.form"
-File[53]=".src/Form/AskName.class:0.0"
-File[54]=".src/Classi/AudiotagClass.class:0.0"
-File[55]=".src/Form/EpgForm.class:3.69"
-File[56]=".src/Form/Xt7Egg.form"
-File[57]=".src/Form/AFiltersCfg.class:187.0"
-File[58]=".src/Form/VFiltersCfg.form"
-File[59]=".src/Form/VFiltersCfg.class:545.20"
-File[60]=".src/Form/MyQuestion.form"
-File[61]=".src/Form/MyAskName.form"
-File[62]=".src/Form/MyAskName.class:33.30"
-File[63]=".src/0_Moduli/ComboHistory.module:21.0"
-File[64]=".src/Classi/SettingsClass.class:14.556"
-File[65]=".src/Form/OpenSubtitesForm.class:135.31"
-Count=65
+File[26]=".src/Form/CoverManager.form"
+File[27]=".src/Form/ProfileManager.class:28.94"
+File[28]=".src/Form/DVBTuner.class:385.26"
+File[29]=".src/Classi/YoutubeClass.class:571.22"
+File[30]=".src/Classi/ShoutCastClass.class:279.34"
+File[31]=".src/Classi/FlashClass.class:129.11"
+File[32]=".src/Form/AllOptions.form"
+File[33]=".src/Form/DVBTuner.form"
+File[34]=".src/Form/AFiltersCfg.form"
+File[35]=".src/Form/OverlayTrayTip.class:158.0"
+File[36]=".src/Form/OverlayTrayTip.form"
+File[37]=".src/Form/zzzFake.form"
+File[38]=".src/Form/zzzFake.class:86.86"
+File[39]=".src/Form/AudioForm.form"
+File[40]=".src/Classi/Meters.class:66.1"
+File[41]=".src/Classi/TagLib.class:137.13"
+File[42]=".src/Classi/FloatSpinBox.class:19.46"
+File[43]=".src/Form/VideoEqualizer.class:68.15"
+File[44]=".src/Form/ChooseAspect.form"
+File[45]=".src/0_Moduli/MyDialog.class:46.0"
+File[46]=".src/Classi/dvbsnoop_class.class:482.18"
+File[47]=".src/Form/EpgForm.form"
+File[48]=".src/Form/HotKeyGrab.form"
+File[49]=".src/Form/AskName.form"
+File[50]=".src/Form/AskName.class:0.0"
+File[51]=".src/Classi/AudiotagClass.class:0.0"
+File[52]=".src/Form/EpgForm.class:3.69"
+File[53]=".src/Form/Xt7Egg.form"
+File[54]=".src/Form/AFiltersCfg.class:187.0"
+File[55]=".src/Form/VFiltersCfg.form"
+File[56]=".src/Form/VFiltersCfg.class:545.20"
+File[57]=".src/Form/MyQuestion.form"
+File[58]=".src/Form/MyAskName.form"
+File[59]=".src/Form/MyAskName.class:33.30"
+File[60]=".src/0_Moduli/ComboHistory.module:21.0"
+File[61]=".src/Classi/SettingsClass.class:14.556"
+File[62]=".src/Form/OpenSubtitesForm.class:135.31"
+File[63]="xt7-player.png"
+File[64]=".src/Form/AddUriForm.form"
+Count=64
 
 [Watches]
 Count=2
