--- a/.settings
+++ b/.settings
@@ -2,8 +2,7 @@
 Count=0
 
 [DebugWindow]
-Count=1
-DebugWindow[1]="obj"
+Count=0
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -686,6 +685,9 @@ Geometry=[0,0,227,584]
 [DebugWindow/epgscanprocess]
 Geometry=[0,0,210,210]
 
+[DebugWindow/feedinfo]
+Geometry=[51,0,377,395]
+
 [DebugWindow/fields]
 Geometry=[51,0,344,344]
 
@@ -1082,9 +1084,8 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:89.29"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:4669.14"
-Active=5
-File[5]="CHANGELOG_GIT:16.30"
+File[4]=".src/Form/FMain.class:3308.32"
+File[5]="CHANGELOG_GIT:11.34"
 File[6]=".src/Form/CoverManager.class:908.30"
 File[7]=".src/Classi/MplayerClass.class:470.3"
 File[8]=".src/Classi/PlaylistClass.class:59.19"
@@ -1108,7 +1109,8 @@ File[25]=".src/Form/XConfigureVideoDriver.form"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/ProfileManager.class:28.94"
 File[28]=".src/Form/DVBTuner.class:385.26"
-File[29]=".src/Classi/YoutubeClass.class:544.0"
+Active=29
+File[29]=".src/Classi/YoutubeClass.class:122.17"
 File[30]=".src/Classi/ShoutCastClass.class:279.34"
 File[31]=".src/Classi/FlashClass.class:129.11"
 File[32]=".src/Form/AllOptions.form"
