--- a/.settings
+++ b/.settings
@@ -781,6 +781,9 @@ Geometry=[1280,0,845,633]
 [DebugWindow/mediaheaders]
 Geometry=[0,41,816,458]
 
+[DebugWindow/menu]
+Geometry=[51,0,210,210]
+
 [DebugWindow/menuopensublang]
 Geometry=[1280,0,210,210]
 
@@ -1090,16 +1093,16 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:89.29"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-File[4]=".src/Form/FMain.class:3308.32"
-File[5]="CHANGELOG_GIT:5.0"
+File[4]=".src/Form/FMain.class:9780.30"
+Active=5
+File[5]="CHANGELOG_GIT:3.10"
 File[6]=".src/Form/CoverManager.class:908.30"
 File[7]=".src/Classi/MplayerClass.class:470.3"
 File[8]=".src/Classi/PlaylistClass.class:59.19"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:187.54"
+File[10]=".src/Form/GeneralOptions.class:1084.0"
 File[11]="AA_ToDo:117.80"
 File[12]=".src/Classi/AlbumView.class:94.27"
-Active=13
 File[13]=".src/Form/FMain.form"
 File[14]="selectionbox.png"
 File[15]="MoreResults.png"
@@ -1125,14 +1128,14 @@ File[34]=".src/Form/AFiltersCfg.form"
 File[35]=".src/Form/OverlayTrayTip.class:158.0"
 File[36]=".src/Form/OverlayTrayTip.form"
 File[37]=".src/Form/zzzFake.form"
-File[38]=".src/Form/zzzFake.class:86.86"
+File[38]=".src/Form/zzzFake.class:21.21"
 File[39]=".src/Form/AudioForm.form"
 File[40]=".src/Classi/Meters.class:0.0"
 File[41]=".src/Classi/TagLib.class:137.13"
 File[42]=".src/Classi/FloatSpinBox.class:19.46"
 File[43]=".src/Form/VideoEqualizer.class:68.15"
 File[44]=".src/Form/ChooseAspect.form"
-File[45]=".src/0_Moduli/MyDialog.class:46.0"
+File[45]=".src/0_Moduli/MyDialog.class:24.22"
 File[46]=".src/Classi/dvbsnoop_class.class:482.18"
 File[47]=".src/Form/EpgForm.form"
 File[48]=".src/Form/HotKeyGrab.form"
@@ -1153,7 +1156,10 @@ File[62]=".src/Form/OpenSubtitesForm.class:135.31"
 File[63]="xt7-player.png"
 File[64]=".src/Form/AddUriForm.form"
 File[65]=".src/Classi/WgetClass.class:4.79"
-Count=65
+File[66]=".src/Classi/StringFileReqClass.class:39.2"
+File[67]=".src/Form/ButtonMenu.form"
+File[68]=".src/Form/ButtonMenu.class:16.3"
+Count=68
 
 [Watches]
 Count=3
