--- a/.settings
+++ b/.settings
@@ -1093,14 +1093,14 @@ SearchString=True
 File[1]=".src/Form/MyQuestion.class:89.29"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
-Active=4
-File[4]=".src/Form/FMain.class:9816.8"
-File[5]="CHANGELOG_GIT:3.44"
+File[4]=".src/Form/FMain.class:9817.40"
+Active=5
+File[5]="CHANGELOG_GIT:3.9"
 File[6]=".src/Form/CoverManager.class:908.30"
 File[7]=".src/Classi/MplayerClass.class:470.3"
 File[8]=".src/Classi/PlaylistClass.class:59.19"
 File[9]=".src/Form/GeneralOptions.form"
-File[10]=".src/Form/GeneralOptions.class:1069.23"
+File[10]=".src/Form/GeneralOptions.class:15.30"
 File[11]="AA_ToDo:117.80"
 File[12]=".src/Classi/AlbumView.class:94.27"
 File[13]=".src/Form/FMain.form"
@@ -1109,12 +1109,12 @@ File[15]="MoreResults.png"
 File[16]="shadow.png"
 File[17]=".src/0_Moduli/Global.module:331.56"
 File[18]=".src/Form/Chains.form"
-File[19]=".src/Form/Chains.class:370.2"
+File[19]=".src/Form/Chains.class:69.30"
 File[20]=".src/Classi/DynaGuiClass.class:267.34"
 File[21]=".src/Classi/StartClass.class:3.0"
 File[22]=".src/Form/XConfigureAudioDriver.form"
-File[23]=".src/Form/XConfigureAudioDriver.class:146.24"
-File[24]=".src/Form/XConfigureVideoDriver.class:85.0"
+File[23]=".src/Form/XConfigureAudioDriver.class:13.30"
+File[24]=".src/Form/XConfigureVideoDriver.class:13.0"
 File[25]=".src/Form/XConfigureVideoDriver.form"
 File[26]=".src/Form/CoverManager.form"
 File[27]=".src/Form/ProfileManager.class:28.94"
@@ -1133,7 +1133,7 @@ File[39]=".src/Form/AudioForm.form"
 File[40]=".src/Classi/Meters.class:0.0"
 File[41]=".src/Classi/TagLib.class:137.13"
 File[42]=".src/Classi/FloatSpinBox.class:19.46"
-File[43]=".src/Form/VideoEqualizer.class:68.15"
+File[43]=".src/Form/VideoEqualizer.class:58.30"
 File[44]=".src/Form/ChooseAspect.form"
 File[45]=".src/0_Moduli/MyDialog.class:6.22"
 File[46]=".src/Classi/dvbsnoop_class.class:482.18"
@@ -1159,7 +1159,10 @@ File[65]=".src/Classi/WgetClass.class:4.79"
 File[66]=".src/Classi/StringFileReqClass.class:39.2"
 File[67]=".src/Form/ButtonMenu.form"
 File[68]=".src/Form/ButtonMenu.class:16.3"
-Count=68
+File[69]=".src/Form/HotKeys.class:265.30"
+File[70]=".src/Form/SubAndOsd.class:280.30"
+File[71]=".src/Form/AudioVideoCodecs.class:36.0"
+Count=71
 
 [Watches]
 Count=3
