--- a/.settings
+++ b/.settings
@@ -1094,11 +1094,11 @@ File[1]=".src/Form/MyQuestion.class:89.29"
 File[2]=".src/Form/LogWindow.class:46.49"
 File[3]=".src/Form/LogWindow.form"
 Active=4
-File[4]=".src/Form/FMain.class:9830.31"
+File[4]=".src/Form/FMain.class:8920.26"
 File[5]="CHANGELOG_GIT:3.10"
 File[6]=".src/Form/CoverManager.class:908.30"
 File[7]=".src/Classi/MplayerClass.class:470.3"
-File[8]=".src/Classi/PlaylistClass.class:59.19"
+File[8]=".src/Classi/PlaylistClass.class:709.16"
 File[9]=".src/Form/GeneralOptions.form"
 File[10]=".src/Form/GeneralOptions.class:15.30"
 File[11]="AA_ToDo:117.80"
@@ -1162,7 +1162,9 @@ File[68]=".src/Form/ButtonMenu.class:16.3"
 File[69]=".src/Form/HotKeys.class:265.30"
 File[70]=".src/Form/SubAndOsd.class:280.30"
 File[71]=".src/Form/AudioVideoCodecs.class:36.0"
-Count=71
+File[72]=".src/Form/OpenSubtitesForm.form"
+File[73]=".src/Classi/OpenSubtitlesAPI.class:285.0"
+Count=73
 
 [Watches]
 Count=3
